# mikan-veeylakh-dictionary

./: Cargo.toml  README.md  gatsby-config.js  package-lock.json
mvd-model/: Cargo.toml
mvd-model/src/: lib.rs
mvd-model/tests/: oxigraph.rs
mvd-model/tests/support/: mod.rs  oxigraph_docker.rs  oxigraph_memory_store.rs  sparql.rs
sophia-ns-lemon/: Cargo.toml
sophia-ns-lemon/src/: lemon.rs  lib.rs
src/components/layout/: layout.tsx
src/pages/: index.tsx
