[package]
name = "mvd-model"
version = "0.1.0"
authors = ["Ya'ar Hever <yaarhever@gmail.com>"]
edition = "2018"

[dev-dependencies]
testcontainers = "0.10.0"
reqwest = { version = "0.10.7", features = ["blocking", "json"] }
serde = "1.0.115"
lazy_static = "1.4.0"
oxigraph = { versoin = "0.1.1", features = ["sophia"] }